# head-pose-estimation-based-face-verification

./: .gitignore  creat_cert.sh  main.py  main.py.bak  maincp.py  pyproject.toml
algorithm/: __init__.py  base.py  face_alignment.py  face_detection.py  face_feature_extraction.py  face_pose_estimation.py  face_pose_estimation_copy.py  face_pose_estimation_cp1.py  face_pose_estimation_cp2.py  face_pose_estimation_og.py  face_recognition.py  utils.py
algorithm/base/: VideoSource.py  __init__.py
algorithm/face_alignment/: __init__.py  face_point.py  onet.py
algorithm/face_detection/: __init__.py  detect_face.py  example.py  main.py  prcnn.py
algorithm/face_pose_estimation/: __init__.py  example.py  utils.py
algorithm/face_pose_estimation.bak/: example.py
algorithm/face_recognition/: __init__.py  example.py
algorithm/hopenet/: example.py  utils.py
algorithm/model/: __init__.py  mobilefacenet.py  prcnn.py  quantization.py  shufflehopenet.py
client/: PySideUI.py  README.md  capacitor.config.ts  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.ts
client/android/app/: build.gradle  build.gradle.kts  capacitor.build.gradle
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/linux/: CMakeLists.txt
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/src/: App.vue  App.vue.bak
client/test/: widget_test.dart
client/web/: index.html  manifest.json
resources/face_lib/: facebank.pth  names.npy
server/: __init__.py  db.sqlite3  index.html  main.py  main.py.bak  manage.py  pyproject.toml  start.sh
server/algorithm/: base.py  face_alignment.py  face_detection.py  face_pose_estimation.py  face_pose_estimation_og.py  face_recognition.py  utils.py
server/algorithm/model/: __init__.py  hopenet.py  hopenetlite.py  mobilefacenet.py  prcnn.py  shufflehopenet.py
server/resources/facebank/1/: name_list.npy
server/resources/facebank/default/: facebank.pth
server/server/: asgi.py  common.py  routing.py  settings.py  urls.py
server/server/biz/: __init__.py  establish.py
server/server/controller/: account.py  api.py  media.py  webrtc.py
server/server/service/: __init__.py  account.py  processor.py  signaling.py  webrtc.py
(+10 files in other folders)
